--- a/html-css-js/css/form.css
+++ b/html-css-js/css/form.css
@@ -96,9 +96,15 @@ label, p {
 
 /* Formularz */
 
+.contact div {
+  margin-bottom: 1rem;
+  margin-top: .5rem;
+}
+
 .contact label {
   display: block;
   margin-left: .5rem;
+  margin-bottom: 5px;
 }
 
 .contact input {
@@ -106,8 +112,6 @@ label, p {
   width: 100%;
   height: 2.5rem;
   padding: .2rem 1rem;
-  margin-bottom: 1rem;
-  margin-top: .5rem;
   color: var(--accent);
 
   border-radius: 1rem;
@@ -146,6 +150,12 @@ label, p {
 
 .submit input[type="submit"]:hover {
   background: rgba(255, 255, 255, 0.2);
+}
+
+small {
+  color: var(--error);
+  font-weight: 400;
+  margin-left: .5rem;
 }
 
 .success {
